
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int u32 ;
struct rss_vf_conf {int rss_vf_vfh; int rss_vf_vfl; } ;
struct cudbg_init {struct adapter* adap; } ;
struct cudbg_error {int dummy; } ;
struct cudbg_buffer {scalar_t__ data; } ;
struct adapter {TYPE_1__* chip_params; } ;
struct TYPE_2__ {int vfcount; } ;


 int compress_buff (struct cudbg_buffer*,struct cudbg_buffer*) ;
 int get_scratch_buff (struct cudbg_buffer*,int,struct cudbg_buffer*) ;
 int release_scratch_buff (struct cudbg_buffer*,struct cudbg_buffer*) ;
 int t4_read_rss_vf_config (struct adapter*,int,int *,int *,int) ;
 int write_compression_hdr (struct cudbg_buffer*,struct cudbg_buffer*) ;

__attribute__((used)) static int collect_rss_vf_config(struct cudbg_init *pdbg_init,
     struct cudbg_buffer *dbg_buff,
     struct cudbg_error *cudbg_err)
{
 struct adapter *padap = pdbg_init->adap;
 struct cudbg_buffer scratch_buff;
 struct rss_vf_conf *vfconf;
 int vf, rc, vf_count;
 u32 size;

 vf_count = padap->chip_params->vfcount;
 size = vf_count * sizeof(*vfconf);

 rc = get_scratch_buff(dbg_buff, size, &scratch_buff);
 if (rc)
  goto err;

 vfconf = (struct rss_vf_conf *)scratch_buff.data;

 for (vf = 0; vf < vf_count; vf++) {
  t4_read_rss_vf_config(padap, vf, &vfconf[vf].rss_vf_vfl,
          &vfconf[vf].rss_vf_vfh, 1);
 }

 rc = write_compression_hdr(&scratch_buff, dbg_buff);
 if (rc)
  goto err1;

 rc = compress_buff(&scratch_buff, dbg_buff);

err1:
 release_scratch_buff(&scratch_buff, dbg_buff);
err:
 return rc;
}
